syntax = "proto3";

message SyncState {
  int32 seq_no = 1; // sync state sequence number --
  bool playing = 2;
  int64 last_sync_time = 3; // integer milliseconds
  double last_sync_position = 4; // floating point seconds
}

message SetSyncStateReq {
  SyncState new_sync_state = 1;
}

message SetSyncStateResp {
  enum Status {
    REJECT = 0;
    ACCEPT = 1;
  }
  Status status = 1;
}
